Changelog
=========

1.3.2 (unreleased)
------------------

- More robust check for existing file with same id.
  Avoid some unsuitable error messages.
  [thomasdesvenain]

- Move interfaces to collective.quickupload.interfaces module.
  [thomasdesvenain]

- Finnish translation
  [saffe]

1.3.1 (2011-12-22)
------------------

- Display quickupload portlet on display views only
  (disable it on edit forms, etc).
  [thomasdesvenain]

- Add error logs when failures happen.
  [thomasdesvenain]

- Works with dexterity AND without blobs.
  [thomasdesvenain]


1.3.0 (2011-11-29)
------------------

- Added Italian translation
  [giacomos]

- Make sure that the portlet is rendered if upload_portal_type is set to auto.
  [swampmonkey]

- Prevent diazo themes from theming the json response.
  [swampmonkey]

- If downloaded content type has been selected in portlet settings
  and content type can't been added in current folder,
  portlet is hidden.
  [thomasdesvenain]

- Works with dexterity.
  We can upload dexterity content types which have a file or image field.
  We can upload contents in dexterity containers.
  [thomasdesvenain]

- Updated Chinese translation.
  [jianaijun]

1.2.1 (2011-10-10)
------------------

- Don't speak about drag and drop feature if navigator is IE.
  (it doesn't works unless version is IE 9.)
  [thomasdesvenain]

- If chameleon is installed the i18n:attributes don't get translated if the
  tag doesn't already have the attribute(s).
  [swampmonkey]

- Update with more Norwegian translations.
  [tormod, hannosch]

1.2.0 (2011-09-22)
------------------

* Fixed error message when trying to upload a file which already exists in folder.
  [thomasdesvenain]

* Added support for tests using plone.app.testing; control panel is now
  removed when package is uninstalled.
  [hvelarde]

* Catch errors if sessions are disabled.
  [swampmonkey]

* Use ``plone.app.portlets.ManagePortlets`` permission, allows site-admins
  to add/edit the portlet.
  [ggozad]
