@@ -3,6 +3,13 @@ Changelog
 
 1.3.2 (unreleased)
 ------------------
+- Trigger custom JS events after each file upload and also when all files
+  were uploaded
+  [avoinea]
+
+- Updated responseJSON with more info about the uploaded file
+  (uid, title and name)
+  [avoinea]
 
 - More robust check for existing file with same id.
   Avoid some unsuitable error messages.
